# rawshift

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LEGAL  PRINCIPLES.md  README.md  TEST_FIXTURES.md  build.rs  fixtures.json  justfile  lefthook.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
benches/: decode.rs  demosaic.rs  pipeline.rs
crates/rawshift/: Cargo.toml
crates/rawshift-core/: Cargo.toml  README.md
crates/rawshift-core/src/: codec.rs  color.rs  image.rs  lib.rs  metadata.rs  pixel.rs
crates/rawshift-hwdec/: Cargo.toml  README.md  build.rs
crates/rawshift-hwdec/src/: lib.rs
crates/rawshift-image/: Cargo.toml  README.md  build.rs
crates/rawshift-image/benches/: decode.rs  demosaic.rs  pipeline.rs
crates/rawshift-image/examples/: decode_standard.rs  develop_image.rs  encode_in_memory.rs  export_image.rs  generate_test_fixtures.rs  heic_inspect.rs  metadata_dump.rs
crates/rawshift-image/src/: error.rs  lib.rs  prelude.rs
crates/rawshift-image/src/codecs/: avif_libaom.rs  bit_pump.rs  heic.rs  jpegli.rs  jpegli_shim.cc  jpegli_shim.h  jxl.rs  jxl_libjxl.rs  mod.rs  webp.rs
crates/rawshift-image/src/core/: mod.rs  rgb_image.rs
crates/rawshift-image/src/data/: cameras.rs  icc.rs  wb.rs
crates/rawshift-image/src/formats/: arw.rs  avif.rs  cr2.rs  cr3.rs  crw.rs  dng.rs  dng_export.rs  encode.rs  export.rs  heic.rs  ifd.rs  mod.rs  nef.rs  raf.rs  registry.rs  standard.rs
crates/rawshift-image/src/metadata/: exif.rs  icc.rs  mod.rs  xmp.rs
crates/rawshift-image/src/processing/: color.rs  mod.rs
crates/rawshift-image/src/processing/demosaic/: bayer.rs  bilinear.rs  mod.rs  xtrans.rs
crates/rawshift-image/src/tiff/: metadata_helper.rs  mod.rs  parser.rs  types.rs  writer.rs
crates/rawshift-image/src/transforms/: bad_pixel.rs  black_level.rs  ca_correction.rs  cfa.rs  color.rs  denoise.rs  lens_correction.rs  opcodes.rs  orientation.rs  simd.rs  tonemap.rs
crates/rawshift-image/tests/: avif_hw_decode.rs  dng_check.rs  export_format_tests.rs  heic_aux.rs  ifd_decoder_tests.rs  raw_decode_fixtures.rs  standard_decode_fixtures.rs  tiff_parser_tests.rs
crates/rawshift-image/tests/common/: mod.rs
crates/rawshift-video/: Cargo.toml  README.md
crates/rawshift-video/src/: lib.rs
crates/rawshift/src/: lib.rs
docs/: BENCHMARKS.md  SUPPORT.md  V1_DESIGN.md
examples/: decode_arw.rs  decode_standard.rs  develop_image.rs  export_image.rs  generate_test_fixtures.rs  metadata_dump.rs
scripts/: .gitignore  fetch_test_fixtures.sh  organize_test_data.py  test_coverage_report.py
src/: error.rs  lib.rs  prelude.rs
src/codecs/: arw.rs  bit_pump.rs  jxl.rs  ljpeg.rs  mod.rs
src/core/: image.rs  metadata.rs  mod.rs  pixel.rs
src/data/: cameras.rs  icc.rs  mod.rs  wb.rs
src/formats/: arw.rs  cr2.rs  cr3.rs  crw.rs  dng.rs  encode.rs  export.rs  mod.rs  nef.rs  raf.rs  standard.rs
src/metadata/: exif.rs  icc.rs  mod.rs
src/processing/: color.rs  demosaic.rs  mod.rs  options.rs
src/processing/demosaic/: bayer.rs  bilinear.rs  mod.rs  xtrans.rs
src/tiff/: metadata_helper.rs  mod.rs  parser.rs  tags.rs  types.rs
src/transforms/: black_level.rs  ca_correction.rs  cfa.rs  color.rs  lens_correction.rs  mod.rs  opcodes.rs  simd.rs  tonemap.rs
tests/: export_format_tests.rs  raw_decode_fixtures.rs  standard_decode_fixtures.rs  tiff_parser_tests.rs
