[workspace]
resolver = "3"
members = [
    "crates/rawshift",
    "crates/rawshift-core",
    "crates/rawshift-image",
    "crates/rawshift-video",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
repository = "https://github.com/justin13888/rawshift"
homepage = "https://github.com/justin13888/rawshift"

[workspace.dependencies]
# Shared infrastructure dependencies (used across multiple workspace crates).
thiserror = "2.0"
tracing   = "0.1"
rayon     = "1.11.0"
serde     = { version = "1.0", features = ["derive"] }
# Internal crates — referenced by path within the workspace, version pinned for
# eventual publishing (publish order: core → image/video → rawshift).
rawshift-core  = { path = "crates/rawshift-core",  version = "0.1.0" }
rawshift-image = { path = "crates/rawshift-image", version = "0.1.0" }
rawshift-video = { path = "crates/rawshift-video", version = "0.1.0" }

# Profiles must live at the workspace root — Cargo ignores profiles declared in
# member manifests.
[profile.release]
lto = "thin"
codegen-units = 1

[profile.fast-debug]
inherits = "release"
debug = 1
incremental = true

[profile.test]
opt-level = 3
debug = 1
incremental = true

[profile.bench]
lto = "thin"
codegen-units = 1
