[workspace]
resolver = "3"
members = [
    "crates/rawshift",
    "crates/rawshift-core",
    "crates/rawshift-hwdec",
    "crates/rawshift-image",
    "crates/rawshift-video",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
license = "MPL-2.0"
repository = "https://github.com/justin13888/rawshift"
homepage = "https://github.com/justin13888/rawshift"

[workspace.dependencies]
# gamut — upstream home for image primitives, color, metadata, container
# parsing, and codecs (see AGENTS.md "Upstream-First Policy"). Consumed as a
# git dependency pinned to an exact commit hash: never a branch, never
# crates.io (until gamut publishes). Crates are added here lazily, as each
# migration issue starts consuming one.
#
# Bumping this pin is a deliberate, reviewed change — see README "Bumping the
# gamut pin" for the required procedure.
gamut-core = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-color = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-exif = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-ifd = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-dng = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-metadata = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-xmp = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-icc = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-jpeg = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
# default-features off: gamut-jxl defaults to decode+encode; rawshift's
# `jxl-decode` / `jxl-encode` features select the halves explicitly.
gamut-jxl = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151", default-features = false }
gamut-png = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-avif = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
gamut-heic = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }
# Dev-only in rawshift-image: constructs synthetic HEIF containers for the
# backend-less HEIC enumeration/decode-pipeline tests.
gamut-isobmff = { git = "https://github.com/justin13888/gamut", rev = "dde9f640ab02ec9c3437c3f1181164f6e7c60151" }

# Shared infrastructure dependencies (used across multiple workspace crates).
thiserror = "2.0"
tracing   = "0.1"
rayon     = "1.11.0"
serde     = { version = "1.0", features = ["derive"] }
# Internal crates — referenced by path within the workspace, version pinned for
# eventual publishing (publish order: core → hwdec → image/video → rawshift).
rawshift-core  = { path = "crates/rawshift-core", version = "0.1.1" }
rawshift-hwdec = { path = "crates/rawshift-hwdec", version = "0.1.1" }
rawshift-image = { path = "crates/rawshift-image", version = "0.1.1" }
rawshift-video = { path = "crates/rawshift-video", version = "0.1.1" }

# Profiles must live at the workspace root — Cargo ignores profiles declared in
# member manifests.
[profile.release]
lto = "thin"
codegen-units = 1

[profile.fast-debug]
inherits = "release"
debug = 1
incremental = true

[profile.test]
opt-level = 3
debug = 1
incremental = true

[profile.bench]
lto = "thin"
codegen-units = 1
