[workspace]
resolver = "3"
members = [
    "crates/rawshift",
    "crates/rawshift-core",
    "crates/rawshift-hwdec",
    "crates/rawshift-image",
    "crates/rawshift-video",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
license = "MPL-2.0"
repository = "https://github.com/visualcommons/rawshift"
homepage = "https://github.com/visualcommons/rawshift"

[workspace.dependencies]
# gamut — upstream home for image primitives, color, metadata, container
# parsing, and codecs (see AGENTS.md "Upstream-First Policy"). Crates are
# added here lazily, as each migration issue starts consuming one.
gamut-core = "2.0.1"
gamut-color = "2.0.0"
gamut-exif = "1.0.0"
gamut-ifd = "2.0.1"
gamut-dng = "1.0.0"
gamut-metadata = "1.0.0"
gamut-xmp = "1.0.0"
gamut-icc = "1.0.0"
gamut-jpeg = "0.1.0"
# default-features off: gamut-jxl defaults to decode+encode; rawshift's
# `jxl-decode` / `jxl-encode` features select the halves explicitly.
gamut-jxl = { version = "0.4.0", default-features = false }
gamut-png = "0.1.0"
gamut-avif = "1.1.0"
gamut-heic = "0.2.2"
# Dev-only in rawshift-image: constructs synthetic HEIF containers for the
# backend-less HEIC enumeration/decode-pipeline tests.
gamut-isobmff = "2.0.1"

# Shared infrastructure dependencies (used across multiple workspace crates).
thiserror = "2.0"
tracing   = "0.1"
rayon     = "1.11.0"
serde     = { version = "1.0", features = ["derive"] }
# Internal crates — referenced by path within the workspace, version pinned for
# eventual publishing (publish order: core → hwdec → image/video → rawshift).
rawshift-core  = { path = "crates/rawshift-core", version = "0.1.1" }
rawshift-hwdec = { path = "crates/rawshift-hwdec", version = "0.1.1" }
rawshift-image = { path = "crates/rawshift-image", version = "0.1.1" }
rawshift-video = { path = "crates/rawshift-video", version = "0.1.1" }

# Profiles must live at the workspace root — Cargo ignores profiles declared in
# member manifests.
[profile.release]
lto = "thin"
codegen-units = 1

[profile.fast-debug]
inherits = "release"
debug = 1
incremental = true

[profile.test]
opt-level = 3
debug = 1
incremental = true

[profile.bench]
lto = "thin"
codegen-units = 1
