[package]
name = "rawshift-image"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Still-image decoding, RAW processing, and encoding for rawshift"
documentation = "https://docs.rs/rawshift-image"
keywords = ["raw", "image", "dng", "arw", "photo"]
categories = ["multimedia::images", "encoding", "parser-implementations"]
readme = "README.md"

[package.metadata.docs.rs]
# (`jxl-encode` builds libjxl from source — via gamut-jxl-sys — but docs.rs
# builds it fine because the build is hermetic under OUT_DIR; it is part of
# `full`.)
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rawshift-core  = { workspace = true }
gamut-core     = { workspace = true }
# gamut-icc backs the sRGB profile construction and validation in
# `metadata/icc.rs`, which compiles unconditionally (the `IccProfile` type is
# part of the public `core` surface), so it is a required dependency.
gamut-icc      = { workspace = true }
gamut-exif     = { workspace = true, optional = true }
# gamut-ifd backs the TIFF IFD structure walking of the TIFF-based RAW decoders
# (ARW/CR2/NEF, CR3's embedded CMT TIFF blocks, and DNG's metadata/thumbnail
# tree). `bigtiff` is enabled so BigTIFF-shaped containers parse (DNG 1.7
# permits 64-bit offsets).
gamut-ifd      = { workspace = true, optional = true, features = ["bigtiff"] }
# gamut-dng backs DNG decode (DngDecoder: uncompressed/Deflate/lossless-JPEG/
# JPEG XL raw data, RawLevels, CameraProfile) and encode (DngEncoder). JPEG XL
# *decode* is built in (pure Rust); the `jxl-encode` feature (libjxl, cmake +
# C++ toolchain) is deliberately not enabled — rawshift only writes
# uncompressed LinearRaw DNGs today.
gamut-dng      = { workspace = true, optional = true }
gamut-metadata = { workspace = true, optional = true }
# gamut-png backs PNG decode (PngDecoder: every colour type and bit depth,
# Adam7 interlace, eXIf/iCCP/XMP chunk extraction, hostile-input resource
# guards) and encode (PngEncoder: 8/16-bit RGB, DEFLATE level + filter
# strategy + lossless auto-reduce, and eXIf/iCCP/XMP-iTXt chunk embedding).
gamut-png      = { workspace = true, optional = true }
# gamut-avif backs AVIF encode (AvifEncoder: 8-bit RGB, lossless or lossy AV1
# intra at identity 4:4:4 — pure Rust, no C toolchain). 10/12-bit and alpha
# encode are pending upstream (justin13888/gamut#251). AVIF decode stays on
# the `image` crate until #33.
gamut-avif     = { workspace = true, optional = true }
gamut-xmp      = { workspace = true, optional = true }
# gamut-jpeg backs JPEG decode (baseline + progressive, grayscale/YCbCr/RGB/
# CMYK/YCCK presentation) and encode (baseline or progressive 8-bit DCT with
# quality/subsampling/restart/density knobs), plus APP-segment EXIF/XMP/ICC
# metadata in both directions — pure Rust, no C toolchain.
gamut-jpeg     = { workspace = true, optional = true }
# gamut-heic backs HEIC decode: container parsing, item/metadata/auxiliary
# enumeration, grid/iden/iovl derivation, colour conversion, and the
# clap/irot/imir transforms. The HEVC codestream itself is decoded through the
# pluggable HevcDecoder seam, which rawshift plugs with a rawshift-hwdec
# hardware decoder (the `hw` feature). Container and metadata paths work with
# no hardware backend at all.
gamut-heic     = { workspace = true, optional = true }
# gamut-isobmff surfaces in gamut-heic's public API (`HeifItem::colour()`
# returns its `ColourInformation`), so the HEIC ICC-extraction path needs the
# crate directly. Same pinned gamut revision as everything else.
gamut-isobmff  = { workspace = true, optional = true }
# rawshift-hwdec provides hardware HEVC/AV1 still-frame decode. Optional and
# pulled only by the `hw`/`hw-*` features: a `heic`-only build is a valid
# container/metadata-only configuration whose pixel decode reports
# `RawError::HwDecoderUnavailable`.
rawshift-hwdec = { workspace = true, optional = true }
# gamut-jxl backs JPEG XL decode (a pure-Rust jxl-rs wrapper — no C toolchain)
# and encode (the reference libjxl, vendored, cmake-built, and statically
# linked by gamut-jxl-sys; needs cmake + a C++ toolchain). Which half is
# compiled is selected by the `jxl-decode` / `jxl-encode` features.
gamut-jxl      = { workspace = true, optional = true }
libwebp-sys    = { version = "0.14",   optional = true }
rayon          = { workspace = true }
image          = { version = "0.25", default-features = false, features = ["avif-native"], optional = true }
resvg          = { version = "0.44",   optional = true }
serde          = { workspace = true, optional = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
zune-core      = { version = "0.5",    optional = true }
zune-ppm       = { version = "0.5",    optional = true }
gif            = { version = "0.13",   optional = true }
tiff           = { version = "0.11",   optional = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
eyre = "0.6.12"
# dng_check exercises the gamut-ifd tree directly (structural DNG assertions
# feeding justin13888/gamut#174).
gamut-ifd = { workspace = true, features = ["bigtiff"] }
# export_format_tests reads back the ICC profile gamut-jxl embeds in the JXL
# codestream (`JxlDecoder::embedded_icc_profile`) — a box-scan cannot see it.
gamut-jxl = { workspace = true, features = ["decode"] }
# heic tests construct synthetic HEIF containers (gamut-isobmff `write`) so the
# backend-less enumeration/metadata/decode-pipeline paths always run, with or
# without an on-disk fixture; gamut-color's ycbcr module supplies the expected
# values for the YCbCr→RGB conversion assertions.
gamut-isobmff = { workspace = true }
gamut-color = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Feature flags are organised in five tiers, high-level to low-level. See the
# "Feature Flags" section of README.md for the full hierarchy and rationale.
#
#   tier 1  bundles            full, experimental, raw-stabilizing, …
#   tier 2  format             jpeg, png, dng, …            (decode + encode)
#   tier 3  direction          jpeg-decode, dng-encode, …   (default impl alias)
#   tier 4  implementation     ppm-decode-zune, …           (compressed only)
#   tier 5  infrastructure     ifd-parser, serde, zune-runtime, exif, …
#
# Only tier-4 features (plus RAW tier-3 features and the gamut-backed
# `jpeg-decode` / `jpeg-encode` / `png-decode` / `png-encode` / `jxl-decode` /
# `jxl-encode` / `avif-encode`, which have a single implementation) reference
# `dep:*`.
default = ["jpeg", "png", "webp", "jxl-decode", "gif-decode", "tiff-decode", "ppm-decode"]

# ── Tier 1: bundle features ───────────────────────────────────────────────────
full = ["jpeg", "png", "webp", "jxl", "gif", "tiff", "avif", "heic", "svg", "ppm",
        "serde", "experimental", "hw"]
experimental    = ["raw-stabilizing", "raw-incomplete"]
raw-stabilizing = ["arw", "dng"]      # RAW formats with fixtures + working decode
raw-incomplete  = ["cr2", "cr3", "crw", "nef", "raf"]  # missing fixtures/decode

# ── Tier 2: format features (decode + encode for one format) ──────────────────
jpeg = ["jpeg-decode", "jpeg-encode"]
png  = ["png-decode", "png-encode"]
webp = ["webp-decode", "webp-encode"]
jxl  = ["jxl-decode", "jxl-encode"]
avif = ["avif-decode", "avif-encode"]
gif  = ["gif-decode"]                 # decode-only
tiff = ["tiff-decode"]                # decode-only
heic = ["heic-decode"]                # decode-only
svg  = ["svg-decode"]                 # decode-only
ppm  = ["ppm-decode"]                 # decode-only
arw  = ["arw-decode"]
cr2  = ["cr2-decode"]
cr3  = ["cr3-decode"]
crw  = ["crw-decode"]
dng  = ["dng-decode", "dng-encode"]
nef  = ["nef-decode"]
raf  = ["raf-decode"]

# ── Tier 3: direction features ────────────────────────────────────────────────
# For compressed formats a direction feature is an alias for that
# format+direction's DEFAULT implementation (tier 4) — this is where the notion
# of a per-format default lives. RAW direction features reference infra/deps
# directly: RAW formats have a single in-repo implementation and no tier-4 layer.
# JPEG is backed directly by gamut-jpeg (no tier-4 layer): like PNG
# and the RAW direction features, each half has a single gamut-backed
# implementation, so the format-direction feature itself pulls the dependency.
# Decode covers baseline + progressive streams (grayscale/YCbCr/RGB/CMYK/YCCK);
# encode writes baseline or progressive 8-bit DCT JPEG. `exif` supplies the
# EXIF builder/parser for the APP1 segment gamut-jpeg reads and writes.
jpeg-decode = ["dep:gamut-jpeg", "exif"]
jpeg-encode = ["dep:gamut-jpeg", "exif"]
# PNG is backed directly by gamut-png (no tier-4 layer): like JPEG and the RAW
# direction features, each half has a single gamut-backed implementation, so
# the format-direction feature itself pulls the dependency. Decode covers
# every PNG colour type and bit depth (incl. Adam7 interlace) with
# hostile-input resource guards, and surfaces eXIf/iCCP/XMP chunk metadata;
# `exif` supplies the parser that maps the eXIf payload into `ImageMetadata`.
png-decode  = ["dep:gamut-png", "exif"]
# Encode: `exif` supplies the ExifBuilder used to serialise the eXIf chunk
# payload.
png-encode  = ["dep:gamut-png", "exif"]
webp-decode = ["webp-decode-libwebp"]
webp-encode = ["webp-encode-libwebp"]
# JXL is backed directly by gamut-jxl (no tier-4 layer): like PNG and
# the RAW direction features, each half has a single gamut-backed
# implementation, so the format-direction feature itself pulls the dependency.
# Decode wraps the pure-Rust jxl-rs decoder; encode wraps the reference libjxl
# (statically built and linked by gamut-jxl-sys — cmake + C++ toolchain).
# `exif` supplies the ExifBuilder used for the container `Exif` box on encode.
jxl-decode  = ["dep:gamut-jxl", "gamut-jxl/decode"]
jxl-encode  = ["dep:gamut-jxl", "gamut-jxl/encode", "exif"]
gif-decode  = ["gif-decode-gif"]
tiff-decode = ["tiff-decode-tiff"]
avif-decode = ["avif-decode-image"]
# AVIF encode is backed directly by gamut-avif (no tier-4 layer): like
# PNG and the RAW direction features, it has a single gamut-backed
# implementation, so the format-direction feature itself pulls the dependency.
# Pure Rust (gamut-av1 AV1 intra + gamut-isobmff container) — 8-bit RGB,
# lossless or lossy; 10/12-bit output is pending justin13888/gamut#251.
# `exif` supplies the ExifBuilder and the `gamut-xmp` validation used when
# splicing EXIF/ICC/XMP items into the encoded container.
avif-encode = ["dep:gamut-avif", "exif"]
# HEIC decode is backed directly by gamut-heic (no tier-4 layer): container
# parsing, metadata, and auxiliary-image enumeration always work; pixel decode
# additionally needs a hardware HEVC decoder (`hw`/`hw-*`, see below) and
# reports `RawError::HwDecoderUnavailable` without one. `exif` supplies the
# parser for the container's Exif item.
heic-decode = ["dep:gamut-heic", "dep:gamut-isobmff", "exif"]
svg-decode  = ["svg-decode-resvg"]
ppm-decode  = ["ppm-decode-zune"]
arw-decode  = ["ifd-parser"]
cr2-decode  = ["ifd-parser"]
cr3-decode  = ["ifd-parser"]
crw-decode  = []
# DNG decode is backed by gamut-dng (raw image, levels, camera profile; JPEG
# XL tile decode is built into gamut-dng, so `jxl-decode` is no longer pulled).
# `ifd-parser` is additionally pulled because format sniffing
# (`RawFile::detect_format`) and the EXIF/GPS/thumbnail tree walk read the
# container through gamut-ifd.
dng-decode  = ["ifd-parser", "dep:gamut-dng"]
dng-encode  = ["dep:gamut-dng"]
nef-decode  = ["ifd-parser"]
raf-decode  = []

# ── Tier 4: implementation features (compressed formats only) ─────────────────
# Named `format-direction-impl`. The only tier that pulls a `dep:*`. Each impl
# feature also enables its tier-3 direction feature, so it can be selected
# standalone. Multiple implementations of the same format+direction may be
# enabled at once; the active backend is chosen at the API level — see
# `DecodeOptions` and `EncodeOptions`.
# `zune-ppm` builds on the `zune-core` codec primitives, so its impl feature
# also pulls `zune-runtime`.
webp-decode-libwebp  = ["webp-decode", "dep:libwebp-sys", "exif"]
webp-encode-libwebp  = ["webp-encode", "dep:libwebp-sys", "exif"]
gif-decode-gif       = ["gif-decode", "dep:gif"]
tiff-decode-tiff     = ["tiff-decode", "dep:tiff", "exif"]
avif-decode-image    = ["avif-decode", "dep:image", "exif"]
svg-decode-resvg     = ["svg-decode", "dep:resvg"]
ppm-decode-zune      = ["ppm-decode", "dep:zune-ppm", "zune-runtime"]

# ── Tier 5: infrastructure / linking features ─────────────────────────────────
# gamut-ifd TIFF/IFD structure engine (used by the migrated TIFF-based RAW
# decoders and by format detection).
ifd-parser    = ["dep:gamut-ifd"]
serde         = ["dep:serde", "rawshift-core/serde"]
# `zune-core` codec primitives (bit depth, colorspace, decoder/encoder option
# builders). Pulled by the zune-backed PPM impl feature (`zune-ppm` is a
# permanent exception to the gamut migration — see AGENTS.md).
zune-runtime  = ["dep:zune-core"]
# Typed EXIF read/write via the gamut metadata stack (`gamut-exif` for the
# blob model, `gamut-metadata` + `gamut-xmp` for the unified-model bridge).
# Pulled by format impl features that parse embedded EXIF on decode or write it
# on encode.
exif          = ["dep:gamut-exif", "dep:gamut-metadata", "dep:gamut-xmp"]
# Hardware still-frame decode (HEVC for HEIC; AV1 for AVIF once gamut-avif
# exposes the container handoff). These are **verified** feature flags — see
# docs/SUPPORT.md for the permanent target/API matrix:
#   `hw`   — portable; selects the native backend for the compile target
#            (build-script warning + no-backend stub on targets with no
#            hardware decode API).
#   `hw-*` — pin one explicit backend; `compile_error!` on any other target.
# Without any of them, `heic` is a valid container/metadata-only build whose
# pixel decode returns `RawError::HwDecoderUnavailable`.
hw              = ["dep:rawshift-hwdec", "rawshift-hwdec/hw"]
hw-videotoolbox = ["hw", "rawshift-hwdec/videotoolbox"]
hw-vaapi        = ["hw", "rawshift-hwdec/vaapi"]
hw-mediacodec   = ["hw", "rawshift-hwdec/mediacodec"]

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "demosaic"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[example]]
name = "develop_image"
required-features = ["experimental"]

[[example]]
name = "export_image"
required-features = ["experimental"]

[[example]]
name = "metadata_dump"
required-features = ["experimental"]

[[example]]
name = "heic_inspect"
required-features = ["heic"]

[[test]]
name = "raw_decode_fixtures"
required-features = ["experimental"]

[[test]]
name = "heic_aux"
required-features = ["heic"]

[[test]]
name = "ifd_decoder_tests"
required-features = ["arw"]

[[test]]
name = "dng_check"
required-features = ["dng"]

[lints.rust]
# `any_raw` / `any_standard_decode` / `any_standard_encode` are cfg aliases
# emitted by build.rs (see `emit_cfg_alias`).
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(any_raw)',
    'cfg(any_standard_decode)',
    'cfg(any_standard_encode)',
] }
